--- a/svelte/package.json
+++ b/svelte/package.json
@@ -2,16 +2,21 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "IS_PROD=true rollup -c",
+    "dev": "IS_PROD=false rollup -c -w",
+    "prod": "IS_PROD=true rollup -c -w",
     "start": "sirv ../",
     "validate": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
     "@tsconfig/svelte": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -19,7 +24,6 @@
     "rollup-plugin-terser": "^7.0.0",
     "serve": "^11.3.2",
     "sirv-cli": "^1.0.0",
-    "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.2.2"
@@ -27,12 +31,13 @@
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
     "sass": "^1.32.8",
+    "svelte": "^3.0.0",
     "svelte-awesome": "^2.3.0",
-    "svelte-environment-variables": "^1.0.3",
     "svelte-materialify": "^0.3.5",
     "svelte-preprocess": "^4.6.9",
     "svelte-spa-router": "^3.1.0"
